--- a/index.html
+++ b/index.html
@@ -5,14 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <!-- Iteration 1 - Navbar -->
+    <div class="nav-wrapper">
+      <img class="logo" src="/images/spotify-logo.png" alt="Spotify logo" />
+
+      <nav class="nav-bar">
+        <ul class="menu-items">
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Discover</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">Download</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Iteration 2 - Header -->
+    <header>
+      <div class="text-iter2">
+        <p class="main-title">Music for everyone.</p>
+        <p class="sub-title">
+          Spotify is now free on mobile, tablet and computer. <br />
+          Listen to the right music, wherever you are.
+        </p>
+      </div>
+    </header>
+
+    <!-- Iteration 3 - Main  -->
+
+    <div>
+      <div><p class="title-iter3">What's on Spotify?</p></div>
+      <div class="iter3-container">
+        <div>
+          <img class="music-icon" src="/images/music-icon.png" alt="" />
+          <p class="iter3-title">Millions of Songs</p>
+          <p class="iter3-subtitle">
+            There are millions of <br />
+            songs on Spotify
+          </p>
+        </div>
+        <div>
+          <img
+            class="high-quality-icon"
+            src="/images/high-quality-icon.png"
+            alt=""
+          />
+          <p class="iter3-title">HD Music</p>
+          <p class="iter3-subtitle">
+            Listen to music as if you <br />
+            were listening live
+          </p>
+        </div>
+        <div>
+          <img class="devices-icon" src="/images/devices-icon.png" alt="" />
+          <p class="iter3-title">Stream Everywhere</p>
+          <p class="iter3-subtitle">
+            Stream music on your <br />
+            smartphone, tablet or <br />
+            computer
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Iteration 4 - Green Section -->
+
+    <div class="iter4">
+      <img class="spotify-icon" src="./images/spotify-icon-white.png" alt="" />
+      <div>
+        <div class="iter4-container">
+          <p class="title-iter4">It's as yeezy as Kanye West.</p>
+        </div>
+        <div class="text-iter4">
+          <div>
+            <p class="title-text">Search</p>
+            <p class="sub-text">
+              Know what you what to listen to? <br />
+              Just search and hit play.
+            </p>
+          </div>
+          <div>
+            <p class="title-text">Browse</p>
+            <p class="sub-text">
+              Check out the latest charts, <br />
+              brand new releases and great <br />
+              playlists for right now.
+            </p>
+          </div>
+          <div>
+            <p class="title-text">Discover</p>
+            <p class="sub-text">
+              Enjoy new music every Monday <br />
+              with your own personal playlist. <br />
+              Or sit back and enjoy Radio.
+            </p>
+          </div>
+        </div>
+        <div></div>
+      </div>
+      <div class="spotify-app-container">
+        <img class="spotify-app" src="/images/spotify-app.jpg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
